# minishell

./: CMakeLists.txt  Makefile  do_builds.c  do_cd.c  do_executable.c  do_setenv.c  do_unsetenv.c  double_split.c  fork_process.c  main.c  minishell  minishell.h  parse.c  script  utils.c
minishell.dSYM/Contents/Resources/DWARF/: minishell
